--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "1.0.0",
   "author": "Kyle Shevlin <kyle.a.shevlin@gmail.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.5",
+    "@emotion/styled": "^10.0.5",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-manifest": "^2.0.9",
