--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "shevyjs": "^1.1.0"
   },
   "keywords": [
     "gatsby"
