--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-remark": "^2.1.19",
     "gatsby-transformer-sharp": "^2.1.8",
+    "lodash.debounce": "^4.0.8",
     "polished": "^2.3.1",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
