adds a script to create a new post directory and file

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "develop": "gatsby develop",
     "start": "npm run develop",
     "format": "prettier --write \"src/**/*.js\"",
+    "newpost": "node ./scripts/newPost.js",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "devDependencies": {
