--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-remark-images": "^3.0.1",
     "gatsby-remark-prismjs": "^3.2.0",
     "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-transformer-json": "^2.1.11",
     "gatsby-transformer-remark": "^2.1.19",
     "gatsby-transformer-sharp": "^2.1.8",
     "lodash.debounce": "^4.0.8",
