--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "author": "Kyle Shevlin <kyle.a.shevlin@gmail.com>",
   "dependencies": {
     "@emotion/core": "^10.0.5",
+    "@mdx-js/mdx": "^1.0.15",
+    "@mdx-js/react": "^1.0.15",
+    "@mdx-js/tag": "^0.20.3",
     "firebase": "^5.8.1",
-    "gatsby": "^2.0.76",
+    "gatsby": "^2.3.34",
     "gatsby-image": "^2.0.20",
+    "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-catch-links": "^2.0.9",
     "gatsby-plugin-emotion": "^4.0.1",
     "gatsby-plugin-feed": "^2.0.11",
@@ -16,13 +20,13 @@
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
-    "gatsby-plugin-sharp": "^2.0.14",
+    "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-plugin-sitemap": "^2.0.4",
     "gatsby-plugin-twitter": "^2.0.8",
     "gatsby-remark-copy-linked-files": "^2.0.8",
     "gatsby-remark-images": "^3.0.1",
     "gatsby-remark-prismjs": "^3.2.0",
-    "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-source-filesystem": "^2.0.33",
     "gatsby-transformer-json": "^2.1.11",
     "gatsby-transformer-remark": "^2.1.19",
     "gatsby-transformer-sharp": "^2.1.8",
@@ -30,8 +34,8 @@
     "polished": "^2.3.1",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "shevyjs": "^1.1.0"
   },
