--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "start": "npm run develop",
     "format": "prettier --write \"src/**/*.js\"",
     "newpost": "node ./scripts/newPost.js",
+    "newmdx": "node .scripts/newMdx.js",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "devDependencies": {
