--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "@mdx-js/mdx": "^1.0.15",
     "@mdx-js/react": "^1.0.15",
     "@mdx-js/tag": "^0.20.3",
+    "dotenv": "^8.1.0",
     "firebase": "^5.8.1",
     "gatsby": "^2.3.34",
     "gatsby-image": "^2.0.20",
-    "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-catch-links": "^2.0.9",
     "gatsby-plugin-emotion": "^4.0.1",
     "gatsby-plugin-feed": "^2.0.11",
     "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-manifest": "^2.0.9",
+    "gatsby-plugin-mdx": "^1.0.28",
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sharp": "^2.0.35",
@@ -27,6 +28,7 @@
     "gatsby-remark-images": "^3.0.1",
     "gatsby-remark-prismjs": "^3.2.0",
     "gatsby-source-filesystem": "^2.0.33",
+    "gatsby-source-graphql": "^2.1.7",
     "gatsby-transformer-json": "^2.1.11",
     "gatsby-transformer-remark": "^2.1.19",
     "gatsby-transformer-sharp": "^2.1.8",
