--- a/.eslintrc
+++ b/.eslintrc
@@ -22,8 +22,8 @@
   },
   "plugins": ["react", "react-hooks", "jsx-a11y", "prettier"],
   "rules": {
-    "react/no-unescaped-entities": 0,
-    "react/prop-types": 0
+    "react/no-unescaped-entities": ["error", { "forbid": [">", "}"] }],
+    "react/prop-types": "off"
   },
   "settings": {
     "react": {
