--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdx-js/tag": "^0.20.3",
     "algoliasearch": "^3.35.1",
     "dotenv": "^8.2.0",
+    "emotion-theming": "^10.0.27",
     "firebase": "^5.8.1",
     "gatsby": "^2.19.45",
     "gatsby-image": "^2.2.44",
