--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "husky": "^4.2.5",
     "jest": "^26.0.1",
     "prettier": "^1.19.1"
   },
@@ -84,5 +85,8 @@
   },
   "bugs": {
     "url": "https://github.com/kyleshevlin/blog/issues"
+  },
+  "husky": {
+    "pre-commit": "npm run format && npm run lint && npm run test"
   }
 }
