--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "start": "npm run develop",
-    "format": "prettier --write \"src/**/*.js\"",
+    "format": "prettier --loglevel=error --write \"src/**/*.js\"",
     "lint": "eslint ./src",
     "newpost": "node ./scripts/newPost.js",
     "newmdx": "node ./scripts/newMdx.js",
