--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "fixRelatedPosts": "node ./scripts/fixRelatedPosts.js",
+    "fixTags": "node ./scripts/fixTags.js",
     "format": "prettier --loglevel=error --write \"src/**/*.js\"",
     "lint": "eslint ./src",
     "newmdx": "node ./scripts/newMdx.js",
