--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gatsby-transformer-sharp": "^2.3.19",
     "lodash.debounce": "^4.0.8",
     "polished": "^2.3.1",
+    "prism-theme-night-owl": "^1.4.0",
     "prismjs": "^1.19.0",
     "prop-types": "^15.6.2",
     "react": "^16.13.0",
