--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lint": "eslint ./src",
     "newmdx": "node ./scripts/newMdx.js",
     "newsnippet": "node ./scripts/newSnippet.js",
+    "serve": "gatsby serve",
     "start": "npm run develop",
     "test:watch": "jest --watch",
     "test": "jest"
