--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.0",
     "shevyjs": "^1.1.0",
+    "use-debugger-hooks": "^1.1.0",
     "xstate": "^4.9.1"
   },
   "keywords": [
