--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-generate-context": "^1.0.0",
     "react-helmet": "^5.2.0",
     "shevyjs": "^2.1.0",
     "use-debugger-hooks": "^1.2.1",
