--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,22 +8,23 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
     "plugin:jsx-a11y/strict",
-    "prettier",
-    "prettier/react"
+    "prettier"
   ],
-  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": 2019,
+    "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "plugins": ["react", "react-hooks", "jsx-a11y", "prettier"],
   "rules": {
     "react/no-unescaped-entities": ["error", { "forbid": [">", "}"] }],
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   },
   "settings": {
     "react": {
