--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@mdx-js/tag": "^0.20.3",
-    "@xstate/react": "^0.8.1",
+    "@xstate/react": "^3.0.1",
     "dotenv": "^8.6.0",
-    "eslint": "^7.32.0",
     "firebase": "^9.4.1",
     "gatsby": "^2.32.13",
     "gatsby-image": "^2.11.0",
@@ -38,9 +37,8 @@
     "lodash.debounce": "^4.0.8",
     "prism-theme-night-owl": "^1.4.0",
     "prismjs": "^1.25.0",
-    "prop-types": "^15.6.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-generate-context": "^1.0.0",
     "react-helmet": "^5.2.0",
     "shevyjs": "^2.1.0",
@@ -62,23 +60,24 @@
     "newsnippet": "node ./scripts/newSnippet.js",
     "serve": "gatsby serve",
     "start": "npm run develop",
-    "test:watch": "jest --watch",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
     "@emotion/babel-preset-css-prop": "^10.2.1",
     "@testing-library/react": "^10.4.9",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^29.3.1",
     "babel-preset-gatsby": "^0.1.6",
+    "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^4.3.8",
-    "jest": "^26.6.3",
-    "prettier": "^2.4.1"
+    "jest": "^29.3.1",
+    "prettier": "^2.8.1"
   },
   "repository": {
     "type": "git",
