--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "gatsby-plugin-google-analytics": "^2.11.0",
     "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-mdx": "^1.10.1",
-    "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-portal": "^1.0.7",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.4",
@@ -61,7 +60,8 @@
     "serve": "gatsby serve",
     "start": "npm run develop",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
@@ -75,7 +75,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "husky": "^4.3.8",
+    "husky": "^8.0.2",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "prettier": "^2.8.1"
@@ -86,11 +86,5 @@
   },
   "bugs": {
     "url": "https://github.com/kyleshevlin/blog/issues"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run format && npm run lint",
-      "pre-push": "npm run test"
-    }
   }
 }
