--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "react-generate-context": "^1.0.0",
     "react-helmet": "^5.2.0",
     "shevyjs": "^2.1.0",
-    "use-debugger-hooks": "^1.3.0",
     "xstate": "^4.26.0"
   },
   "keywords": [
@@ -79,7 +78,8 @@
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "prettier": "^2.8.1"
+    "prettier": "^2.8.1",
+    "use-debugger-hooks": "^1.3.0"
   },
   "repository": {
     "type": "git",
