--- a/package.json
+++ b/package.json
@@ -41,8 +41,6 @@
     "@astrojs/tailwind": "^5.1.0",
     "@kyleshevlin/layout": "^0.6.0",
     "@nanostores/react": "^0.7.1",
-    "@types/react": "^18.2.47",
-    "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@xstate/react": "^3.2.2",
@@ -60,13 +58,18 @@
     "xstate": "^4.38.3"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.0",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^0.31.2",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.2",
+    "jsdom": "^24.1.1",
     "prettier": "^3.2.1",
     "prettier-plugin-astro": "^0.12.3",
     "prettier-plugin-tailwindcss": "^0.5.11",
